--- a/src/style.css
+++ b/src/style.css
@@ -1,29 +1,35 @@
 body {
-    background-image: url("./imagen/imagen_fondo.jpg"); 
-  }
+  background-image: url("./imagen/imagen_fondo.jpg"); 
+}
 
- footer {
-    background-color:#373736;
-    padding: 15px;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    color: white;
- }
- 
- .logo {
+footer {
+  background-color:#373736;
+  padding: 15px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  color: white;
+}
+
+.logo {
   width: 700px;
   display: block;
   height: 160.35px;
   margin: 80px auto;
- }
+}
 
 .bar {
   background: #373736;
   display: flex; 
   justify-content: space-between;
   padding: 15px;
-  }
+}
+
+button {
+  position: relative;
+  border-radius: 12px;
+  background-color: #4BA7AC;
+}
 
 .links {
   display: flex;
@@ -37,4 +43,3 @@ body {
   display: flex; 
   justify-content: space-between;
 }
-
