--- a/src/style.css
+++ b/src/style.css
@@ -1,32 +1,51 @@
 body {
   background-image: url("./imagen/imagen_fondo.jpg"); 
+  background-repeat: no-repeat;
+  background-size: cover; 
 }
 footer {
   background-color:#373736;
-  padding: 15px;
-  position: absolute;
+  padding: 30px;
   bottom: 0;
   width: 100%;
-  color: white;
+  color: cornsilk;
 }
+
+button {
+ position: relative;
+ border-radius: 12px;
+ background-color: #268688;
+ color: cornsilk;
+ padding: 10px 32px;
+ text-shadow: -2px -2px 2px rgba(0, 0, 0, 0.658); 
+ transition: transform 2s; /*tiempo en que demora en agrandarse*/
+}
+
+button:hover {
+  -ms-transform: scale(1.5);
+  transform: scale(1.5);
+}
+
 .logo {
   width: 700px;
   display: block;
   height: 160.35px;
   margin: 80px auto;
 }
-.bar {
+
+.navegation {
   background: #373736;
   display: flex; 
   justify-content: space-between;
   padding: 15px;
 }
-button {
-  position: relative;
+
+.buttons-nav {
   border-radius: 12px;
-  background-color: #4BA7AC;
-  color: #ffffff;
+  padding: 8px 25px;
+  width: 150px;
 }
+
 .links {
   display: flex;
   align-items: center;
@@ -34,7 +53,55 @@ button {
   flex-direction: column;
   font-size: 12px;
 }
-.typChamp {
+
+.typ-champ {
   display: flex; 
   justify-content: space-between;
 }
+.champ-container {
+  padding: 10px;
+  margin: 20px; 
+  cursor: pointer; 
+}
+
+.img-container {
+  border-radius: 50%;   
+}
+
+#root {
+  background-color: rgba(65, 71, 77, 0.5);
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.div-container {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  background-color: rgba(0, 0, 0, 0.9);
+  /*-ms-transform: translate(-50%,-50%);
+  cursor: pointer; */
+}
+
+.img-modal {
+  position: relative;
+  display: inline-block;
+  width: 450px;
+ }
+
+ .title-modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color:  #FFD700;
+  text-transform: capitalize;
+ }
+ 
+.blurb-modal {
+  color: cornsilk;
+}  
+
+/*.info {
+  color:cornsilk; 
+ }*/
